added new prices

--- a/app/index.html
+++ b/app/index.html
@@ -106,13 +106,13 @@
 								</p>
 								<ul class="price">
 									<li class="price-item">
-										25л <span class="new-price"> 6 830 грн</span> <span class="old-price"> 7 530 грн</span>
+										25л <span class="new-price"> 7 790 грн</span> <span class="old-price"> 8 790 грн</span>
 									</li>
 									<li class="price-item">
-										35л <span class="new-price"> 7 330 грн</span> <span class="old-price"> 8 030 грн</span>
+										35л <span class="new-price"> 8 390 грн</span> <span class="old-price"> 9 390 грн</span>
 									</li>
 									<li class="price-item">
-										50л <span class="new-price"> 7 830 грн</span> <span class="old-price"> 8 530 грн</span>
+										50л <span class="new-price"> 8 990 грн</span> <span class="old-price"> 9 990 грн</span>
 									</li>
 								</ul>
 								<div class="form-group">
@@ -537,21 +537,21 @@
 										<li class="cat-price-item active">
 											<p class="pr-mob">Цена:</p>
 											<div class="cat-price-container">
-												<span class="new-price">6 830₴</span> <span class="old-price">7 530₴ </span>
+												<span class="new-price">7 790₴</span> <span class="old-price">8 790₴ </span>
 											</div>
 											<button class="btn btn-orange btn-cat" data-toggle="modal" data-target="#primaTwen">купить аппарат</button>
 										</li>
 										<li class="cat-price-item">
 											<p class="pr-mob">Цена:</p>
 											<div class="cat-price-container">
-												<span class="new-price">7 330₴</span> <span class="old-price">8 030₴ </span>
+												<span class="new-price">8 390₴</span> <span class="old-price">9 390₴ </span>
 											</div>
 											<button class="btn btn-orange btn-cat" data-toggle="modal" data-target="#primaThird">купить аппарат</button>
 										</li>
 										<li class="cat-price-item">
 											<p class="pr-mob">Цена:</p>
 											<div class="cat-price-container">
-												<span class="new-price">7 830₴</span> <span class="old-price">8 530₴ </span>
+												<span class="new-price">8 990₴</span> <span class="old-price">9 990₴ </span>
 											</div>
 											<button class="btn btn-orange btn-cat" data-toggle="modal" data-target="#primaFift">купить аппарат</button>
 										</li>
@@ -563,7 +563,7 @@
 												<span aria-hidden="true">&times;</span>
 												</button>
 												<p class="modal-h">AquaGradus Прима Тора 25 литров</p>
-												<p class="modal-title">Сумма заказа: 6 830 грн</p>
+												<p class="modal-title">Сумма заказа: 7 790 грн</p>
 												<div class="form-group">
 													<!-- hidden -->
 													<input type="hidden" name="DATA[TITLE]" value="Новый лид: Аппарат - Прима; Форма - Прима 25 литров">
@@ -583,7 +583,7 @@
 												<span aria-hidden="true">&times;</span>
 												</button>
 												<p class="modal-h">AquaGradus Прима Тора 35 литров</p>
-												<p class="modal-title">Сумма заказа: 7 330 грн</p>
+												<p class="modal-title">Сумма заказа: 8 390 грн</p>
 												<div class="form-group">
 													<!-- hidden -->
 													<input type="hidden" name="DATA[TITLE]" value="Новый лид: Аппарат - Прима; Форма - Прима 35 литров">
@@ -603,7 +603,7 @@
 												<span aria-hidden="true">&times;</span>
 												</button>
 												<p class="modal-h">AquaGradus Прима Тора 50 литров</p>
-												<p class="modal-title">Сумма заказа: 7 830 грн</p>
+												<p class="modal-title">Сумма заказа: 8 990 грн</p>
 												<div class="form-group">
 													<!-- hidden -->
 													<input type="hidden" name="DATA[TITLE]" value="Новый лид: Аппарат - Прима; Форма - Прима 50 литров">
@@ -662,15 +662,15 @@
 										</div>
 										<div class="cat-tank-price">
 											<div class="price-tank active">
-												<p class="price"><span>Цена:</span> 2700грн</p>
+												<p class="price"><span>Цена:</span> 3200грн</p>
 												<button class="btn btn-orange btn-tank" data-toggle="modal" data-target="#kubTwen">купить</button>
 											</div>
 											<div class="price-tank">
-												<p class="price"><span>Цена:</span> 3200грн</p>
+												<p class="price"><span>Цена:</span> 3800грн</p>
 												<button class="btn btn-orange btn-tank" data-toggle="modal" data-target="#kubThird">купить</button>
 											</div>
 											<div class="price-tank">
-												<p class="price"><span>Цена:</span> 3700грн</p>
+												<p class="price"><span>Цена:</span> 4400грн</p>
 												<button class="btn btn-orange btn-tank" data-toggle="modal" data-target="#kubFift">купить</button>
 											</div>
 										</div>
@@ -683,7 +683,7 @@
 											<img src="img/catalog/col.png" alt="Колонна AquaGradus™ Прима Тора" class="img-responsive" data-toggle="modal" data-target="#col-modal">
 										</div>
 										<div class="price-col">
-											<p class="price"><span>Цена:</span> 4830грн</p>
+											<p class="price"><span>Цена:</span> 5600грн</p>
 											<button class="btn btn-orange btn-col" data-toggle="modal" data-target="#primaColona">купить</button>
 										</div>
 									</div>
@@ -700,7 +700,7 @@
 											<span aria-hidden="true">&times;</span>
 											</button>
 											<p class="modal-h">Бак AquaGradus 25 литров</p>
-											<p class="modal-title">Сумма заказа: 2 700 грн</p>
+											<p class="modal-title">Сумма заказа: 3 200 грн</p>
 											<div class="form-group">
 												<!-- hidden -->
 												<input type="hidden" name="DATA[TITLE]" value="Новый лид: Аппарат - Прима; Форма - Бак 25 литров">
@@ -720,7 +720,7 @@
 											<span aria-hidden="true">&times;</span>
 											</button>
 											<p class="modal-h">Бак AquaGradus 35 литров</p>
-											<p class="modal-title">Сумма заказа: 3 200 грн</p>
+											<p class="modal-title">Сумма заказа: 3 800 грн</p>
 											<div class="form-group">
 												<!-- hidden -->
 												<input type="hidden" name="DATA[TITLE]" value="Новый лид: Аппарат - Прима; Форма - Бак 35 литров">
@@ -740,7 +740,7 @@
 											<span aria-hidden="true">&times;</span>
 											</button>
 											<p class="modal-h">Бак AquaGradus 50 литров</p>
-											<p class="modal-title">Сумма заказа: 3 700 грн</p>
+											<p class="modal-title">Сумма заказа: 4 400 грн</p>
 											<div class="form-group">
 												<!-- hidden -->
 												<input type="hidden" name="DATA[TITLE]" value="Новый лид: Аппарат - Прима; Форма - Бак 50 литров">
@@ -760,7 +760,7 @@
 											<span aria-hidden="true">&times;</span>
 											</button>
 											<p class="modal-h">Колонна AquaGradus Прима Тора</p>
-											<p class="modal-title">Сумма заказа: 4 830 грн</p>
+											<p class="modal-title">Сумма заказа: 5 600 грн</p>
 											<div class="form-group">
 												<!-- hidden -->
 												<input type="hidden" name="DATA[TITLE]" value="Новый лид: Аппарат - Прима; Форма - Колонна Прима">
@@ -1485,7 +1485,7 @@
 									<p class="adds-name">Спирально призматическая насадка (СПН), 1.5 кг</p>
 									<div class="adds-text">Для получения ректификата, 96.6 градусов.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>1500грн</p>
+										<p class="price"><span>Цена: </span>1725грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-nasadka">подробнее</button>
 								</div>
@@ -1494,7 +1494,7 @@
 									<p class="adds-name">Регулятор мощности нагрева АГ-2</p>
 									<div class="adds-text">Для организации автономного нагрева: скорость перегонки и мобильность эксплуатации.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>1600грн</p>
+										<p class="price"><span>Цена: </span>1850грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-regulyator">подробнее</button>
 								</div>
@@ -1507,7 +1507,7 @@
 									<p class="adds-name">Водяной ТЭН для самогонного аппарата</p>
 									<div class="adds-text">Для организации автономного и комбинированного нагрева.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>300грн</p>
+										<p class="price"><span>Цена: </span>350грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-ten">подробнее</button>
 								</div>
@@ -1516,7 +1516,7 @@
 									<p class="adds-name">Муфта под ТЭН (заглушка продается отдельно)</p>
 									<div class="adds-text">Для организации автономного нагрева.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>250грн</p>
+										<p class="price"><span>Цена: </span>300грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-zaglushka">подробнее</button>
 								</div>
@@ -1529,7 +1529,7 @@
 									<p class="adds-name">Дефлегматор AquaGradus</p>
 									<div class="adds-text">Для эксперементов, перегонка: густых зерновых браг, фруктовых ароматных браг.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>1000грн</p>
+										<p class="price"><span>Цена: </span>1150грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-deflegmator">подробнее</button>
 								</div>
@@ -1538,7 +1538,7 @@
 									<p class="adds-name">Арома-Диоптр Aquagradus, фланец</p>
 									<div class="adds-text">Для более комфортной перегонки и ароматизации продукта.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>2150грн</p>
+										<p class="price"><span>Цена: </span>2500грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-aromadioptr">подробнее</button>
 								</div>
@@ -1551,7 +1551,7 @@
 									<p class="adds-name">Непрерывный контроль крепости (Попугай)</p>
 									<div class="adds-text">Для точного измерения продукта в реальном времени.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>750грн</p>
+										<p class="price"><span>Цена: </span>900грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-popugay">подробнее</button>
 								</div>
@@ -1560,7 +1560,7 @@
 									<p class="adds-name">Набор профессиональных ареометров и мерная колба</p>
 									<div class="adds-text">Для точного измерения продукта (3 ареометра и мерная колба).</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>450грн</p>
+										<p class="price"><span>Цена: </span>550грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-kit">подробнее</button>
 								</div>
@@ -1618,7 +1618,7 @@
 										Цена (1,5 кг):
 									</div>
 									<div class="price">
-										1 500₴
+										1 725₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-nasadka-form">
@@ -1687,7 +1687,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										1 600₴
+										1 850₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-regulyator-form">
@@ -1751,7 +1751,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										300₴
+										350₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-ten-form">
@@ -1815,7 +1815,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										250₴
+										300₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-mufta-form">
@@ -1879,7 +1879,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										1 000₴
+										1 150₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-deflegmator-form">
@@ -1939,7 +1939,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										2 150₴
+										2 500₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-jioptr-form">
@@ -2000,7 +2000,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										750₴
+										900₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-popugai-form">
@@ -2066,7 +2066,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										450₴
+										550₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-areometri-form">
@@ -2166,8 +2166,8 @@
 							<div class="collapse">
 								<div class="card-block">
 									<p>
-										Цена на 25 л - 6830₴, 35 л - 7330₴, 50 л - 7830₴. Чтобы узнать цены на аппарат нажмите на кнопку купить.
-										<a href="#constructor" class="link link-one">Купить аппарат</a>
+										Цена на 25 л - 7790₴, 35 л - 8390₴, 50 л - 8990₴. Чтобы узнать цены на аппарат нажмите на кнопку купить.
+										<a href="#catalog" class="link link-one">Купить аппарат</a>
 									</p>
 								</div>
 							</div>
