--- a/app/sps/index.html
+++ b/app/sps/index.html
@@ -54,7 +54,7 @@
 									<p class="adds-name">Кольца Рашига (пищевая медь), 0.5 кг</p>
 									<div class="adds-text">Очищайте "злачные и фруктовые" браги от сернистых соединений.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>355грн</p>
+										<p class="price"><span>Цена: </span>1725грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-nasadka">подробнее</button>
 								</div>
@@ -63,7 +63,7 @@
 									<p class="adds-name">Регулятор мощности нагрева АГ-2</p>
 									<div class="adds-text">Для организации автономного нагрева: скорость перегонки и мобильность эксплуатации.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>1600грн</p>
+										<p class="price"><span>Цена: </span>1850грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-regulyator">подробнее</button>
 								</div>
@@ -76,7 +76,7 @@
 									<p class="adds-name">Водяной ТЭН для самогонного аппарата</p>
 									<div class="adds-text">Для организации автономного и комбинированного нагрева.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>300грн</p>
+										<p class="price"><span>Цена: </span>350грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-ten">подробнее</button>
 								</div>
@@ -85,7 +85,7 @@
 									<p class="adds-name">Муфта под ТЭН (заглушка продается отдельно)</p>
 									<div class="adds-text">Для организации автономного нагрева.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>250грн</p>
+										<p class="price"><span>Цена: </span>300грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-zaglushka">подробнее</button>
 								</div>
@@ -95,10 +95,10 @@
 							<div class="carusel-box">
 								<div class="adds-box">
 									<img src="../img/adds/deflegmator.png" alt="Спиртовые дрожжи Coobra" class="img-responsive adds-img">
-									<p class="adds-name">Спиртовые дрожжи Coobra</p>
-									<div class="adds-text">Быстро выбраживают, высокая спиртуозность, нет посторонних запахов.</div>
+									<p class="adds-name">Дефлегматор AquaGradus</p>
+									<div class="adds-text">Для эксперементов, перегонка: густых зерновых браг, фруктовых ароматных браг.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>150грн</p>
+										<p class="price"><span>Цена: </span>1150грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-deflegmator">подробнее</button>
 								</div>
@@ -107,7 +107,7 @@
 									<p class="adds-name">Арома-Диоптр Aquagradus, фланец</p>
 									<div class="adds-text">Для более комфортной перегонки и ароматизации продукта.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>2150грн</p>
+										<p class="price"><span>Цена: </span>2500грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-aromadioptr">подробнее</button>
 								</div>
@@ -120,7 +120,7 @@
 									<p class="adds-name">Непрерывный контроль крепости (Попугай)</p>
 									<div class="adds-text">Для точного измерения продукта в реальном времени.</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>750грн</p>
+										<p class="price"><span>Цена: </span>900грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-popugay">подробнее</button>
 								</div>
@@ -129,7 +129,7 @@
 									<p class="adds-name">Набор профессиональных ареометров и мерная колба</p>
 									<div class="adds-text">Для точного измерения продукта (3 ареометра и мерная колба).</div>
 									<div class="adds-prise">
-										<p class="price"><span>Цена: </span>450грн</p>
+										<p class="price"><span>Цена: </span>550грн</p>
 									</div>
 									<button class="btn btn-orange adds-btn" data-toggle="modal" data-target="#add-kit">подробнее</button>
 								</div>
@@ -187,7 +187,7 @@
 										Цена (1,5 кг):
 									</div>
 									<div class="price">
-										1 500₴
+										1 725₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-nasadka-form">
@@ -256,7 +256,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										1 600₴
+										1 850₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-regulyator-form">
@@ -320,7 +320,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										300₴
+										350₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-ten-form">
@@ -384,7 +384,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										250₴
+										300₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-mufta-form">
@@ -448,7 +448,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										1 000₴
+										1 150₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-deflegmator-form">
@@ -508,7 +508,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										2 150₴
+										2 500₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-jioptr-form">
@@ -569,7 +569,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										750₴
+										900₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-popugai-form">
@@ -635,7 +635,7 @@
 										Цена:
 									</div>
 									<div class="price">
-										450₴
+										550₴
 									</div>
 								</div>
 								<form method="post" class="m-adds-form" id="adds-areometri-form">
